<resources>
    <string name="app_name">EPM App</string>
    <string name="app_name_full">E-Powered Move App</string>

    <string name="location_no_range">No Range</string>
    <string name="location_100m">100m</string>
    <string name="location_500m">500m</string>
    <string name="location_1km">1km</string>
    <string name="location_5km">5km</string>
    <string name="location_10km">10km</string>
    <string name="location_50km">50km</string>
    <string name="location_unknown">Unknown</string>
    <string name="payment_type_app">App</string>
    <string name="payment_type_paypal">Paypal</string>
    <string name="payment_type_ebanking">E-banking</string>
    <string name="payment_type_locally">Locally</string>
    <string name="availability_unavailable">Unavailable</string>
    <string name="availability_available">Available</string>
    <string name="availability_inuse">In use</string>
    <string name="availability_unknown">Unknown</string>
    <string name="current_type_ac">AC</string>
    <string name="current_type_dc">DC</string>
    <string-array name="current_types">
        <item>@string/current_type_ac</item>
        <item>@string/current_type_dc</item>
    </string-array>
    <string name="tesla_compatible_yes">Yes</string>
    <string name="tesla_compatible_no">No</string>
    <string name="review_status_active">Active</string>
    <string name="review_status_cancelled">Cancelled</string>
    <string name="nav_map">Map</string>
    <string name="nav_reservation">Reservations</string>
    <string name="nav_garage">Garage</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_account">Account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="nav_profile">Profile</string>
    <string name="please_wait">please wait…</string>

    <string name="general_error">An error occurred</string>
    <string name="wrong_credentials">Wrong Credentials</string>
    <string name="no_internet">No Internet Connection Established</string>
    <string name="empty_credentials">Credentials must be filled in</string>
    <string name="create_account_error">Error occurred while creating account</string>
    <string name="empty_email">Fill in the email and try again</string>
    <string name="email_not_exist">The email has not been registered</string>
    <string name="username_is_used">username is already used</string>
    <string name="gps_not_enabled">Please turn on GPS</string>
    <string name="gps_no_permission">No permission has been granted to use GPS</string>
    <string name="no_location_selected">Select a location</string>
    <string name="upload_image_error">Error occurred while uploading image</string>
    <string name="error_adding_reservation_missing_fields">Not all fields have been filled out</string>
    <string name="download_image_error">Error occurred while getting image</string>
    <string name="no_location_found">No location found</string>
    <string name="storage_no_permission">No permission has been granted to use Storage</string>
    <string name="error_fetching_user">Cannot get signed in user. Try to reconnect</string>
    <string name="error_fetching_reservations">Cannot get reservations</string>
    <string name="error_searching_charging_station">Error occurred while searching for closest charging station</string>
    <string name="no_charging_stations_found">No charging station found near your location</string>
    <string name="closest_charging_station_found">Found closest Charging Station for your selected vehicle and current time. If you want you can make a reservation</string>
    <string name="error_no_vehicle_selected">You haven\'t selected any vehicle. Go to your garage and select one</string>
    <string name="error_fetching_pois">Cannot get points of interest. Check your internet connection</string>
    <string name="error_fetching_vehicles">Cannot get vehicles</string>
    <string name="error_deleting_vehicle">Could not delete vehicle. Please try again</string>
    <string name="error_cancelling_reservation">Could not cancel reservation. Please try again</string>
    <string name="error_fetching_closest_route_info">Could not get closest route information</string>
    <string name="error_adding_vehicle">Could not add vehicle. Please try again</string>
    <string name="error_editing_vehicle">Could not edit vehicle. Please try again</string>
    <string name="error_adding_reservation">Could not add reservation. Please try again</string>
    <string name="error_adding_reservation_time_overlap">Could not add reservation. The time range you provided overlaps other reservation</string>
    <string name="reservation_added">Reservation successfully submitted. Go to reservations to see the details</string>
    <string name="error_fetching_plugs">Cannot fetch plugs</string>
    <string name="no_plugs_found">There are no plugs yet</string>
    <string name="error_fetching_plug_types">Cannot fetch plug types</string>
    <string name="error_adding_review">Error occurred while adding review</string>
    <string name="error_fetching_reviews">Cannot fetch reviews</string>
    <string name="error_no_plug_found_for_selected_vehicle">This charging station does not support the plug of the vehicle you have selected</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="not_valid_email">enter valid email</string>
    <string name="not_valid_name">required, up to 50 characters</string>
    <string name="not_valid_text">required, up to 30 characters</string>
    <string name="not_valid_battery">required, like 42</string>
    <string name="not_valid_phone">enter valid phone number</string>
    <string name="reset_email_sent">Email sent</string>
    <string name="google_sign_in_failed">Could not sign in with google account</string>
    <string name="not_valid_pass_length">from 6 to 20 alphanumeric characters</string>
    <string name="app_name_shared_prefs" translatable="false">epmApp</string>
    <string name="shared_pref_firebase_token" translatable="false">firebaseToken</string>
    <string name="shared_pref_selected_vehicle" translatable="false">selectedVehicle</string>
    <string name="passwords_not_match">passwords are not the same</string>
    <string name="search_place">search place…</string>
    <string name="poi_extra" translatable="false">POI_EXTRA</string>
    <string name="reservation_source_extra" translatable="false">RESERVATION_SOURCE_EXTRA</string>
    <string name="vehicle_type_car">Car</string>
    <string name="vehicle_type_motorbike">Motorbike</string>
    <string name="vehicle_type_scooter">Scooter</string>
    <string name="vehicle_type_bicycle">Bicycle</string>
    <string name="vehicle_type_other">Other</string>
    <string-array name="vehicle_types">
        <item>@string/vehicle_type_car</item>
        <item>@string/vehicle_type_motorbike</item>
        <item>@string/vehicle_type_scooter</item>
        <item>@string/vehicle_type_bicycle</item>
        <item>@string/vehicle_type_other</item>
    </string-array>
    <string name="ev_type_mhev">Mild hybrid electric vehicle</string>
    <string name="ev_type_hev">Hybrid electric vehicle</string>
    <string name="ev_type_phev">Plug-in hybrid electric vehicle</string>
    <string name="ev_type_bev">Battery electric vehicle</string>
    <string-array name="ev_types">
        <item>@string/ev_type_mhev</item>
        <item>@string/ev_type_hev</item>
        <item>@string/ev_type_phev</item>
        <item>@string/ev_type_bev</item>
    </string-array>
    <string name="delete_vehicle_title">Delete Vehicle</string>
    <string name="delete_vehicle_question">Are you sure you want to delete this vehicle?</string>
    <string name="cancel_reservation_title">Cancel Reservation</string>
    <string name="cancel_reservation_question">Are you sure you want to cancel this reservation?</string>
    <string name="route_info_title">Closest Charging Station</string>
    <string name="route_info_message_1">Closest charging station is</string>
    <string name="route_info_message_2">meters away. You have to make</string>
    <string name="route_info_message_3">meters with your selected vehicle and</string>
    <string name="route_info_message_4">meters on foot in order to reach that charging station.</string>
    <string name="route_info_question">Are you sure you want to proceed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>


</resources>